--- a/public/pages/customcommands/edit.html
+++ b/public/pages/customcommands/edit.html
@@ -124,7 +124,7 @@
                 visible: this.visible,
                 enabled: this.enabled
               }
-              this.socket.emit('update', [data], (err, _id) => {
+              this.socket.emit('update', {items: [data]}, (err, _id) => {
                 if (err) {
                   console.error(err)
                   return this.states.save = 3
