--- a/public/pages/keywords/edit.html
+++ b/public/pages/keywords/edit.html
@@ -108,7 +108,7 @@
                 keyword: this.keyword.trim(),
                 enabled: this.enabled
               }
-              this.socket.emit('update', [data], (err, _id) => {
+              this.socket.emit('update', {items: [data]}, (err, _id) => {
                 if (err) {
                   console.error(err)
                   return this.states.save = 3
