--- a/public/pages/ranks/edit.html
+++ b/public/pages/ranks/edit.html
@@ -94,7 +94,7 @@
                 hours: parseInt(this.hours),
                 value: this.value.trim(),
               }
-              this.socket.emit('update', [data], (err, _id) => {
+              this.socket.emit('update', {items: [data]}, (err, _id) => {
                 if (err) {
                   console.error(err)
                   return this.states.save = 3
