ui/various: Fix incorrect _id sent on delete
#1119

--- a/public/pages/cooldown/edit.html
+++ b/public/pages/cooldown/edit.html
@@ -109,7 +109,7 @@
             return _.filter(this.hasError, (o) => o === true).length === 0
           },
           deleteItem: function () {
-            this.socket.emit('delete', this.id, () => {
+            this.socket.emit('delete', {_id: this.id}, () => {
               page('/#cooldown/list')
             })
           },
