--- a/public/pages/keywords/edit.html
+++ b/public/pages/keywords/edit.html
@@ -153,7 +153,7 @@
       // load up from db
       if (commons.urlParam('id')) {
         keywordsEdit.id = commons.urlParam('id')
-        keywordsEdit.socket.emit('findOne', { _id: commons.urlParam('id') }, (err, data) => {
+        keywordsEdit.socket.emit('findOne', { where: { _id: commons.urlParam('id') } }, (err, data) => {
           keywordsEdit.response = data.response
           keywordsEdit.keyword = data.keyword
           keywordsEdit.enabled = data.enabled
