panel: Fix incorrect socket to highlights

--- a/public/index.html
+++ b/public/index.html
@@ -398,7 +398,7 @@
       query: "token=" + token
     });
 
-    var highlightsSocket = io('/systems/Highlights', { query: "token=" + token })
+    var highlightsSocket = io('/systems/highlights', { query: "token=" + token })
     var loadedMenu = false
     var addingWidget = false
     var systems
