--- a/public/pages/timers/edit.html
+++ b/public/pages/timers/edit.html
@@ -62,7 +62,7 @@
             </button>
           </div>
         </div>
-        <button type="button" class="btn btn-success btn-block" @click="addResponse();pending=true">Add response</button>
+        <button type="button" class="btn btn-success btn-block" @click="addResponse();pending=true">{{ commons.translate('systems.timers.add_response') }}</button>
       </div>
     </form>
 
