ui/cooldown: Add missing type toggles

--- a/public/pages/cooldown/edit.html
+++ b/public/pages/cooldown/edit.html
@@ -46,6 +46,10 @@
             <button type="button" class="btn btn-block" v-on:click="owner = !owner" v-bind:class="[ owner ? 'btn-success' : 'btn-danger' ]" aria-hidden="true">{{ (owner ? commons.translate('enabled') : commons.translate('disabled')) | capitalize }}</button>
           </div>
           <div class="col-md-2">
+            <label style="margin: 0px 0px 3px; font-size: 11px; font-weight: 400; text-transform: uppercase; letter-spacing: 1px;">{{commons.translate('type')}}</label>
+            <button type="button" class="btn btn-block" v-on:click="type = type === 'global' ? 'user' : 'global'" v-bind:class="[ type === 'global' ? 'btn-warning' : 'btn-info' ]" aria-hidden="true">{{ commons.translate(type) | capitalize }}</button>
+          </div>
+          <div class="col-md-2">
               <label style="margin: 0px 0px 3px; font-size: 11px; font-weight: 400; text-transform: uppercase; letter-spacing: 1px;">{{ commons.translate('status') }}</label>
             <button type="button" class="btn btn-block" v-on:click="enabled = !enabled" v-bind:class="[ enabled ? 'btn-success' : 'btn-danger' ]" aria-hidden="true">{{ (enabled ? commons.translate('enabled') : commons.translate('disabled')) | capitalize }}</button>
           </div>
