--- a/public/pages/cooldown/list.html
+++ b/public/pages/cooldown/list.html
@@ -39,12 +39,15 @@
           <div class="card-body border-top p-0 text-right">
             <div class="btn-group" role="group">
               <a v-bind:href="'?id='+ item._id + '#cooldown/edit'" class="btn btn-outline-dark p-3 border-0"><i class="fas fa-pencil-alt mr-1" aria-hidden="true"></i> {{ commons.translate('dialog.buttons.edit') }}</a>
+              <button v-on:click="item.type = item.type === 'global' ? 'user' : 'global'; sendUpdate(item._id)"  class="btn btn-outline-dark p-3 border-0">
+                <span style="margin: 0; font-size: 14px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px;">{{commons.translate(item.type).toUpperCase()}}</span>
+              </button>
               <button v-on:click="item.moderator = !item.moderator; sendUpdate(item._id)"  class="btn btn-outline-dark p-3 border-0">
-                  <span v-bind:style="{ 'color': !item.moderator ? 'tomato' : 'inherit', 'text-decoration': !item.moderator ? 'line-through': 'inherit'}" style="margin: 0; font-size: 14px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px;">{{commons.translate('cooldown-moderators').toUpperCase()}}</span>
-                </button>
-                <button v-on:click="item.owner = !item.owner; sendUpdate(item._id)"  class="btn btn-outline-dark p-3 border-0">
-                  <span v-bind:style="{ 'color': !item.owner ? 'tomato' : 'inherit', 'text-decoration': !item.owner ? 'line-through': 'inherit'}" style="margin: 0; font-size: 14px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px;">{{commons.translate('cooldown-owners').toUpperCase()}}</span>
-                </button>
+                <span v-bind:style="{ 'color': !item.moderator ? 'tomato' : 'inherit', 'text-decoration': !item.moderator ? 'line-through': 'inherit'}" style="margin: 0; font-size: 14px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px;">{{commons.translate('cooldown-moderators').toUpperCase()}}</span>
+              </button>
+              <button v-on:click="item.owner = !item.owner; sendUpdate(item._id)"  class="btn btn-outline-dark p-3 border-0">
+                <span v-bind:style="{ 'color': !item.owner ? 'tomato' : 'inherit', 'text-decoration': !item.owner ? 'line-through': 'inherit'}" style="margin: 0; font-size: 14px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px;">{{commons.translate('cooldown-owners').toUpperCase()}}</span>
+              </button>
               <button v-on:click="item.enabled = !item.enabled; sendUpdate(item._id)"  class="btn btn-outline-dark p-3 border-0"><i class="fas mr-1"  v-bind:class="[ item.enabled ? 'fa-toggle-on' : 'fa-toggle-off' ]" aria-hidden="true"></i> {{ item.enabled ? commons.translate('enabled') : commons.translate('disabled') }}</button>
               <button type="button" type="button" v-on:click="deleteItem(item._id)" class="btn btn-outline-dark p-3 border-0"><i class="far fa-trash-alt mr-1" aria-hidden="true"></i> {{ commons.translate('delete') }}</button>
             </div>
@@ -62,6 +65,9 @@
             <div class="col-md-4">
               <div class="p-0 text-right">
                 <a v-bind:href="'?id='+ item._id + '#cooldown/edit'" v-bind:title="commons.translate('dialog.buttons.edit')" class="btn btn-outline-dark p-1 border-0"><i class="fas fa-pencil-alt m-1" aria-hidden="true"></i></a>
+                <button v-on:click="item.type = item.type === 'global' ? 'user' : 'global'; sendUpdate(item._id)"  class="btn btn-outline-dark p-3 border-0">
+                  <span style="margin: 0; font-size: 14px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px;">{{commons.translate(item.type).toUpperCase()}}</span>
+                </button>
                 <button v-on:click="item.moderator = !item.moderator; sendUpdate(item._id)"  class="btn btn-outline-dark p-3 border-0">
                   <span v-bind:style="{ 'color': !item.moderator ? 'tomato' : 'inherit', 'text-decoration': !item.moderator ? 'line-through': 'inherit'}" style="margin: 0; font-size: 14px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px;">{{commons.translate('cooldown-moderators').toUpperCase()}}</span>
                 </button>
