ui/cooldown: Fix not saving of type

--- a/public/pages/cooldown/edit.html
+++ b/public/pages/cooldown/edit.html
@@ -125,6 +125,7 @@
                 key: this.key.trim(),
                 miliseconds: Number(this.miliseconds) * 1000,
                 moderator: this.moderator,
+                type: this.type,
                 owner: this.owner,
                 quiet: this.quiet,
                 enabled: this.enabled
