--- a/public/pages/overlays.html
+++ b/public/pages/overlays.html
@@ -331,6 +331,14 @@
           <div class="w-100"></div>
 
           <div class="col" style="max-width: 50%">
+            <strong data-lang="overlay-credits-show-subcommunitygifts"></strong>
+          </div>
+          <div class="col" style="max-width: 50%">
+            <input id="creditsSubcommunitygiftsToggle" type="checkbox" data-toggle="toggle" data-onstyle="success" data-offstyle="danger">
+          </div>
+          <div class="w-100"></div>
+
+          <div class="col" style="max-width: 50%">
             <strong data-lang="overlay-credits-show-resubs"></strong>
           </div>
           <div class="col" style="max-width: 50%">
@@ -459,6 +467,14 @@
           </div>
           <div class="col" style="max-width: 50%">
             <input id="input_creditsSubgiftBy" class="form-control input-sm" type="text" />
+          </div>
+          <div class="w-100"></div>
+
+          <div class="col" style="max-width: 50%">
+            <strong data-lang="overlay-credits-subcommunitygift-by"></strong>
+          </div>
+          <div class="col" style="max-width: 50%">
+            <input id="input_creditsSubcommunitygiftBy" class="form-control input-sm" type="text" />
           </div>
           <div class="w-100"></div>
 
@@ -640,6 +656,7 @@
     toggle('creditsHosts')
     toggle('creditsSubscribers')
     toggle('creditsSubgifts')
+    toggle('creditsSubcommunitygifts')
     toggle('creditsResubs')
     toggle('creditsCheers')
     toggle('creditsClips')
